--- a/index.html
+++ b/index.html
@@ -447,6 +447,68 @@
             color: #e2e8f0;
         }
 
+        /* Statistics Modal */
+        .stats-modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(0, 0, 0, 0.8);
+            z-index: 9999;
+            align-items: center;
+            justify-content: center;
+        }
+        .stats-modal.is-open {
+            display: flex;
+        }
+        .stats-modal-content {
+            background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%);
+            border: 1px solid rgba(71, 85, 105, 0.3);
+            border-radius: 1rem;
+            padding: 2rem;
+            max-width: 500px;
+            width: 90%;
+            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+            animation: modalSlideIn 0.3s ease-out;
+        }
+        @keyframes modalSlideIn {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+        .stats-category {
+            background: rgba(30, 41, 59, 0.5);
+            border: 1px solid rgba(71, 85, 105, 0.3);
+            border-radius: 0.5rem;
+            padding: 1rem;
+            margin-bottom: 0.75rem;
+            transition: all 0.3s ease;
+        }
+        .stats-category:hover {
+            background: rgba(30, 41, 59, 0.8);
+            border-color: #F86825;
+            transform: translateX(5px);
+        }
+        .stats-icon-btn {
+            background: rgba(30, 41, 59, 0.6);
+            border: 1px solid rgba(71, 85, 105, 0.3);
+            padding: 0.5rem;
+            border-radius: 0.5rem;
+            transition: all 0.3s ease;
+            cursor: pointer;
+        }
+        .stats-icon-btn:hover {
+            background: rgba(248, 104, 37, 0.2);
+            border-color: #F86825;
+        }
+
         .loading {
             display: inline-block;
             width: 20px;
@@ -495,13 +557,25 @@
                 <a href="#art" class="hover:text-white transition-colors">Data Art</a>
                 <a href="#tech" class="hover:text-white transition-colors">Tech Insights</a>
                 <a href="#story" class="hover:text-white transition-colors">Data Stories</a>
+                <button id="stats-icon-btn" class="stats-icon-btn text-slate-300 hover:text-white" aria-label="블로그 통계 보기" title="블로그 통계">
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
+                    </svg>
+                </button>
                 <a href="https://www.pebblous.ai/en/contact" target="_blank" rel="noopener noreferrer" class="bg-slate-800 hover:bg-slate-700 px-4 py-2 rounded-md transition-colors">Contact</a>
             </nav>
-            <button id="mobile-menu-btn" class="md:hidden text-white" aria-label="Toggle mobile menu" aria-expanded="false">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
-                </svg>
-            </button>
+            <div class="flex items-center space-x-3 md:hidden">
+                <button id="stats-icon-btn-mobile" class="stats-icon-btn text-white" aria-label="블로그 통계 보기" title="블로그 통계">
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
+                    </svg>
+                </button>
+                <button id="mobile-menu-btn" class="text-white" aria-label="Toggle mobile menu" aria-expanded="false">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+                    </svg>
+                </button>
+            </div>
         </div>
         <!-- Mobile Menu -->
         <nav id="mobile-menu" class="mobile-menu md:hidden bg-slate-900 border-t border-slate-800" aria-label="Mobile navigation">
@@ -633,6 +707,26 @@
         </section>
 
     </main>
+
+    <!-- Statistics Modal -->
+    <div id="stats-modal" class="stats-modal" role="dialog" aria-labelledby="stats-modal-title" aria-hidden="true">
+        <div class="stats-modal-content">
+            <div class="flex justify-between items-center mb-6">
+                <h2 id="stats-modal-title" class="text-2xl font-bold text-white">📊 블로그 통계</h2>
+                <button id="stats-modal-close" class="text-slate-400 hover:text-white transition-colors" aria-label="닫기">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                    </svg>
+                </button>
+            </div>
+            <div id="stats-content" class="space-y-3">
+                <!-- Stats will be populated here -->
+            </div>
+            <div class="mt-6 pt-4 border-t border-slate-700">
+                <p class="text-sm text-slate-400 text-center">마지막 업데이트: <span id="stats-update-date"></span></p>
+            </div>
+        </div>
+    </div>
 
     <!-- Footer Component (loaded dynamically) -->
     <div id="footer-placeholder"></div>
@@ -1221,6 +1315,18 @@
 
                 // Setup search
                 setupSearch();
+
+                // Setup statistics modal
+                setupStatsModal(artArticles, techArticles, storyArticles);
+
+                // Show statistics modal on first load
+                const hasSeenStats = sessionStorage.getItem('hasSeenStats');
+                if (!hasSeenStats) {
+                    setTimeout(() => {
+                        showStatsModal();
+                        sessionStorage.setItem('hasSeenStats', 'true');
+                    }, 500);
+                }
             } catch (error) {
                 console.error('Failed to load articles:', error);
                 ['art-articles', 'tech-articles', 'story-articles'].forEach(id => {
@@ -1352,6 +1458,138 @@
             }).join('');
 
             resultsSection.classList.add('has-results');
+        }
+
+        // Statistics Modal Functions
+        function setupStatsModal(artArticles, techArticles, storyArticles) {
+            const statsContent = document.getElementById('stats-content');
+            const statsUpdateDate = document.getElementById('stats-update-date');
+
+            // Calculate statistics
+            const totalArticles = artArticles.length + techArticles.length + storyArticles.length;
+
+            // Create statistics HTML
+            const categoryIcons = {
+                art: '🎨',
+                tech: '⚙️',
+                story: '📊'
+            };
+
+            const stats = [
+                {
+                    key: 'art',
+                    name: categories.art?.name || 'Data Art',
+                    count: artArticles.length,
+                    icon: categoryIcons.art,
+                    color: '#F86825'
+                },
+                {
+                    key: 'tech',
+                    name: categories.tech?.name || 'Tech Insights',
+                    count: techArticles.length,
+                    icon: categoryIcons.tech,
+                    color: '#14b8a6'
+                },
+                {
+                    key: 'story',
+                    name: categories.story?.name || 'Data Stories',
+                    count: storyArticles.length,
+                    icon: categoryIcons.story,
+                    color: '#8b5cf6'
+                }
+            ];
+
+            statsContent.innerHTML = `
+                <div class="stats-category" style="border-color: rgba(248, 104, 37, 0.5);">
+                    <div class="flex items-center justify-between">
+                        <div class="flex items-center gap-3">
+                            <span class="text-3xl">📝</span>
+                            <div>
+                                <h3 class="text-lg font-semibold text-white">전체 포스트</h3>
+                                <p class="text-sm text-slate-400">Total Articles</p>
+                            </div>
+                        </div>
+                        <div class="text-right">
+                            <p class="text-3xl font-bold" style="color: #F86825;">${totalArticles}</p>
+                        </div>
+                    </div>
+                </div>
+                ${stats.map(stat => `
+                    <div class="stats-category">
+                        <div class="flex items-center justify-between">
+                            <div class="flex items-center gap-3">
+                                <span class="text-2xl">${stat.icon}</span>
+                                <div>
+                                    <h3 class="text-base font-semibold text-white">${stat.name}</h3>
+                                    <div class="w-full bg-slate-700 rounded-full h-2 mt-1">
+                                        <div class="h-2 rounded-full transition-all duration-500"
+                                             style="width: ${totalArticles > 0 ? (stat.count / totalArticles * 100) : 0}%; background-color: ${stat.color};"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="text-right">
+                                <p class="text-2xl font-bold text-white">${stat.count}</p>
+                                <p class="text-xs text-slate-400">${totalArticles > 0 ? Math.round(stat.count / totalArticles * 100) : 0}%</p>
+                            </div>
+                        </div>
+                    </div>
+                `).join('')}
+            `;
+
+            // Update date
+            const today = new Date();
+            statsUpdateDate.textContent = today.toLocaleDateString('ko-KR', {
+                year: 'numeric',
+                month: 'long',
+                day: 'numeric'
+            });
+
+            // Setup event listeners
+            const modal = document.getElementById('stats-modal');
+            const closeBtn = document.getElementById('stats-modal-close');
+            const statsBtn = document.getElementById('stats-icon-btn');
+            const statsBtnMobile = document.getElementById('stats-icon-btn-mobile');
+
+            // Open modal
+            const openModal = () => showStatsModal();
+            if (statsBtn) statsBtn.addEventListener('click', openModal);
+            if (statsBtnMobile) statsBtnMobile.addEventListener('click', openModal);
+
+            // Close modal
+            const closeModal = () => hideStatsModal();
+            if (closeBtn) closeBtn.addEventListener('click', closeModal);
+
+            // Close on backdrop click
+            if (modal) {
+                modal.addEventListener('click', (e) => {
+                    if (e.target === modal) closeModal();
+                });
+            }
+
+            // Close on ESC key
+            document.addEventListener('keydown', (e) => {
+                if (e.key === 'Escape' && modal.classList.contains('is-open')) {
+                    closeModal();
+                }
+            });
+        }
+
+        function showStatsModal() {
+            const modal = document.getElementById('stats-modal');
+            if (modal) {
+                modal.classList.add('is-open');
+                modal.setAttribute('aria-hidden', 'false');
+                document.body.style.overflow = 'hidden';
+            }
+        }
+
+        function hideStatsModal() {
+            const modal = document.getElementById('stats-modal');
+            if (modal) {
+                modal.classList.remove('is-open');
+                modal.setAttribute('aria-hidden', 'true');
+                document.body.style.overflow = '';
+            }
         }
 
         // Load articles when DOM is ready
