--- a/project/App/text-audit-01.html
+++ b/project/App/text-audit-01.html
@@ -559,13 +559,26 @@
                     pageLogo.src = themes[themeName].logoImage;
                 }
 
-                // Update button styles
+                // Update button styles with appropriate colors for visibility
                 const themeSwitcher = document.getElementById('theme-switcher');
                 if (themeSwitcher) {
                     themeSwitcher.querySelectorAll('button').forEach(btn => {
+                        const btnTheme = btn.dataset.theme;
                         btn.style.backgroundColor = 'transparent';
-                        btn.style.color = 'var(--text-primary)';
+
+                        // Set icon color based on current theme for better visibility
+                        if (themeName === 'dark') {
+                            // Dark theme: all icons should be light
+                            btn.style.color = '#cbd5e1'; // slate-300
+                        } else if (themeName === 'light') {
+                            // Light theme: all icons should be dark
+                            btn.style.color = '#475569'; // slate-600
+                        } else if (themeName === 'beige') {
+                            // Beige theme: all icons should be dark brown
+                            btn.style.color = '#5a534a';
+                        }
                     });
+
                     if (activeBtn) {
                         activeBtn.style.backgroundColor = 'var(--accent-color)';
                         activeBtn.style.color = 'white';
