--- a/project/ISO5259/5259_text_qa.html
+++ b/project/ISO5259/5259_text_qa.html
@@ -213,7 +213,7 @@
                         </thead>
                         <tbody>
                             <!-- Inherent Data Quality Characteristics (본질적 특성) -->
-                            <tr class="border-b bg-gray-50 dark:bg-gray-800">
+                            <tr class="border-b themeable-table-header-row">
                                 <td class="p-3" rowspan="5"><strong>본질적 특성<br>(Inherent)</strong></td>
                                 <td class="p-3"><strong>Accuracy</strong> (정확성)</td>
                                 <td class="p-3">데이터 값이 실제 값을 올바르게 나타내는 정도</td>
@@ -236,7 +236,7 @@
                             </tr>
 
                             <!-- Inherent & System-Dependent Characteristics (본질적 & 시스템 의존) -->
-                            <tr class="border-b bg-gray-50 dark:bg-gray-800">
+                            <tr class="border-b themeable-table-header-row">
                                 <td class="p-3" rowspan="7"><strong>본질적 & 시스템 의존<br>(Inherent & System-Dependent)</strong></td>
                                 <td class="p-3"><strong>Accessibility</strong> (접근성)</td>
                                 <td class="p-3">데이터에 접근할 수 있는 정도</td>
@@ -267,7 +267,7 @@
                             </tr>
 
                             <!-- System-Dependent Characteristics (시스템 의존) -->
-                            <tr class="border-b bg-gray-50 dark:bg-gray-800">
+                            <tr class="border-b themeable-table-header-row">
                                 <td class="p-3" rowspan="3"><strong>시스템 의존<br>(System-Dependent)</strong></td>
                                 <td class="p-3"><strong>Availability</strong> (가용성)</td>
                                 <td class="p-3">데이터셋을 검색할 수 있는 정도</td>
@@ -282,7 +282,7 @@
                             </tr>
 
                             <!-- Additional Data Quality Characteristics (추가 특성 - AI/ML 특화) -->
-                            <tr class="border-b bg-gray-50 dark:bg-gray-800">
+                            <tr class="border-b themeable-table-header-row">
                                 <td class="p-3" rowspan="9"><strong>추가 특성<br>(AI/ML 특화)</strong></td>
                                 <td class="p-3"><strong>Auditability</strong> (감사가능성)</td>
                                 <td class="p-3">데이터가 감사를 받았거나 감사 가능한 정도</td>
@@ -621,6 +621,7 @@
                     footer, footer .border-t { border-color: ${theme.borderColor}; }
                     #sticky-header { background-color: ${theme.background}; border-color: ${theme.borderColor}; }
                     #theme-switcher { border-color: ${theme.borderColor}; }
+                    .themeable-table-header-row { background-color: ${theme.background === '#111827' ? 'rgba(55, 65, 81, 0.3)' : theme.background === '#F9FAFB' ? 'rgba(243, 244, 246, 0.8)' : 'rgba(254, 243, 199, 0.5)'}; }
 
                     /* Interactive Styles */
                     .themeable-toc-border { border-color: ${theme.borderColor}; }
