--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
     <canvas id="particle-canvas"></canvas>
 
     <!-- Header -->
-    <header class="fixed top-0 left-0 right-0 z-50 bg-slate-950/80 backdrop-blur-sm border-b border-slate-800">
+    <header class="fixed top-0 left-0 right-0 z-50 bg-slate-950 border-b border-slate-800" style="transform: translateZ(0); will-change: transform;">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="/" aria-label="Pebblous 홈페이지">
                 <img src="https://pebblous.github.io/image/Pebblous_BM_White_RGB.png" alt="Pebblous Logo" class="h-7 w-auto object-contain max-w-full" loading="eager">
@@ -1318,15 +1318,6 @@
 
                 // Setup statistics modal
                 setupStatsModal(artArticles, techArticles, storyArticles);
-
-                // Show statistics modal on first load
-                const hasSeenStats = sessionStorage.getItem('hasSeenStats');
-                if (!hasSeenStats) {
-                    setTimeout(() => {
-                        showStatsModal();
-                        sessionStorage.setItem('hasSeenStats', 'true');
-                    }, 500);
-                }
             } catch (error) {
                 console.error('Failed to load articles:', error);
                 ['art-articles', 'tech-articles', 'story-articles'].forEach(id => {
@@ -1468,11 +1459,18 @@
             // Calculate statistics
             const totalArticles = artArticles.length + techArticles.length + storyArticles.length;
 
-            // Create statistics HTML
+            // Create statistics HTML with monochrome vector icons
             const categoryIcons = {
-                art: '🎨',
-                tech: '⚙️',
-                story: '📊'
+                art: `<svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zm0 0h12a2 2 0 002-2v-4a2 2 0 00-2-2h-2.343M11 7.343l1.657-1.657a2 2 0 012.828 0l2.829 2.829a2 2 0 010 2.828l-8.486 8.485M7 17h.01"></path>
+                </svg>`,
+                tech: `<svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"></path>
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                </svg>`,
+                story: `<svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
+                </svg>`
             };
 
             const stats = [
@@ -1500,17 +1498,19 @@
             ];
 
             statsContent.innerHTML = `
-                <div class="stats-category" style="border-color: rgba(248, 104, 37, 0.5);">
+                <div class="stats-category" style="border-color: rgba(100, 116, 139, 0.5);">
                     <div class="flex items-center justify-between">
                         <div class="flex items-center gap-3">
-                            <span class="text-3xl">📝</span>
+                            <svg class="w-10 h-10" style="color: #94a3b8;" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
+                            </svg>
                             <div>
                                 <h3 class="text-lg font-semibold text-white">전체 포스트</h3>
                                 <p class="text-sm text-slate-400">Total Articles</p>
                             </div>
                         </div>
                         <div class="text-right">
-                            <p class="text-3xl font-bold" style="color: #F86825;">${totalArticles}</p>
+                            <p class="text-3xl font-bold text-white">${totalArticles}</p>
                         </div>
                     </div>
                 </div>
@@ -1518,7 +1518,7 @@
                     <div class="stats-category">
                         <div class="flex items-center justify-between">
                             <div class="flex items-center gap-3">
-                                <span class="text-2xl">${stat.icon}</span>
+                                <div style="color: ${stat.color};">${stat.icon}</div>
                                 <div>
                                     <h3 class="text-base font-semibold text-white">${stat.name}</h3>
                                     <div class="w-full bg-slate-700 rounded-full h-2 mt-1">
