--- a/index.html
+++ b/index.html
@@ -620,8 +620,8 @@
             <div class="absolute inset-0 bg-grid-slate-800/40 [mask-image:linear-gradient(to_bottom,white_5%,transparent_80%)]"></div>
             <div class="relative z-10 max-w-4xl mx-auto">
                 <h1 class="hero-fade-in text-4xl md:text-6xl font-extrabold text-white mb-8" style="line-height: 1.6; animation-delay: 0.2s;">
-                    사람과 데이터 사이의 간극,<br>
-                    <span class="accent-color">기술과 예술</span>로 줄입니다.
+                    사람과 데이터 사이,<br>
+                    <span class="accent-color">기술과 예술</span>로 더 가깝게.
                 </h1>
                 <div class="hero-fade-in mt-12 max-w-3xl mx-auto" style="animation-delay: 0.5s;">
                     <div class="relative px-8 py-6 rounded-lg border border-slate-700/50 bg-gradient-to-br from-slate-800/60 to-slate-900/60 backdrop-blur-sm">
@@ -629,7 +629,7 @@
                             Pebblous Makes Data Tangible
                         </p>
                         <p class="text-base md:text-lg text-slate-300 font-light" style="line-height: 1.75; letter-spacing: 0.01em;">
-                            흩어지는 모래알을 손에 잡히는 조약돌로
+                            페블러스는 흩어지는 모래알 같은 데이터를 손에 꼭 잡히는 멋진 조약돌로 만들어 갑니다.
                         </p>
                         <div class="absolute top-0 left-0 w-1 h-full accent-bg rounded-l-lg"></div>
                     </div>
