--- a/index.html
+++ b/index.html
@@ -471,8 +471,18 @@
                 return;
             }
 
-            // Initial display limit
-            const initialLimit = 6;
+            // Get current columns per row based on screen width
+            const getColumnsPerRow = () => {
+                const width = window.innerWidth;
+                if (width < 640) return 1;      // mobile
+                if (width < 1024) return 2;     // tablet (sm)
+                if (width < 1280) return 3;     // desktop (lg)
+                return 4;                        // xl and above
+            };
+
+            // Initial display limit - 2 rows worth of cards
+            const initialColumnsPerRow = getColumnsPerRow();
+            const initialLimit = initialColumnsPerRow * 2;
             let currentDisplayCount = initialLimit;
             let previousDisplayCount = 0;
 
@@ -628,8 +638,9 @@
 
                 // Calculate and add empty slots for grid alignment
                 const currentCards = container.querySelectorAll('.card').length;
-                const cardsInLastRow = currentCards % 3;
-                const emptySlots = cardsInLastRow === 0 ? 0 : 3 - cardsInLastRow;
+                const columnsPerRow = getColumnsPerRow();
+                const cardsInLastRow = currentCards % columnsPerRow;
+                const emptySlots = cardsInLastRow === 0 ? 0 : columnsPerRow - cardsInLastRow;
 
                 for (let i = 0; i < emptySlots; i++) {
                     const placeholder = document.createElement('div');
@@ -652,7 +663,9 @@
                     // Load more functionality
                     document.getElementById(`loadmore-${category}`).addEventListener('click', function() {
                         previousDisplayCount = currentDisplayCount;
-                        currentDisplayCount = Math.min(currentDisplayCount + 6, articles.length);
+                        const columnsPerRow = getColumnsPerRow();
+                        const increment = columnsPerRow * 2; // Add 2 rows at a time
+                        currentDisplayCount = Math.min(currentDisplayCount + increment, articles.length);
                         updateDisplay(true);
                     });
                 }
@@ -671,7 +684,9 @@
                     // Show less functionality
                     document.getElementById(`showless-${category}`).addEventListener('click', function() {
                         previousDisplayCount = currentDisplayCount;
-                        currentDisplayCount = Math.max(currentDisplayCount - 6, initialLimit);
+                        const columnsPerRow = getColumnsPerRow();
+                        const decrement = columnsPerRow * 2; // Remove 2 rows at a time
+                        currentDisplayCount = Math.max(currentDisplayCount - decrement, initialLimit);
                         updateDisplay(false);
 
                         // Scroll to section top smoothly
@@ -688,8 +703,9 @@
             container.innerHTML = cardsHtml;
 
             // Calculate initial placeholders
-            const cardsInLastRow = initialLimit % 3;
-            const emptySlots = cardsInLastRow === 0 ? 0 : 3 - cardsInLastRow;
+            const columnsPerRow = getColumnsPerRow();
+            const cardsInLastRow = initialLimit % columnsPerRow;
+            const emptySlots = cardsInLastRow === 0 ? 0 : columnsPerRow - cardsInLastRow;
             for (let i = 0; i < emptySlots; i++) {
                 const placeholder = document.createElement('div');
                 placeholder.className = 'card-placeholder';
@@ -714,7 +730,9 @@
 
                 document.getElementById(`loadmore-${category}`).addEventListener('click', function() {
                     previousDisplayCount = currentDisplayCount;
-                    currentDisplayCount = Math.min(currentDisplayCount + 6, articles.length);
+                    const columnsPerRow = getColumnsPerRow();
+                    const increment = columnsPerRow * 2; // Add 2 rows at a time
+                    currentDisplayCount = Math.min(currentDisplayCount + increment, articles.length);
                     updateDisplay(true);
                 });
             }
