--- a/project/PhysicalAI/data-pipeline-for-physical-ai-01.html
+++ b/project/PhysicalAI/data-pipeline-for-physical-ai-01.html
@@ -41,7 +41,7 @@
     <meta id="og-url" property="og:url" content="https://blog.pebblous.ai/project/PhysicalAI/data-pipeline-for-physical-ai-01.html">
     <meta id="og-title" property="og:title" content="Physical AI 시대의 도래: 제조 혁신을 위한 데이터 전략 | Pebblous">
     <meta id="og-description" property="og:description" content="Physical AI가 제조업의 패러다임을 바꾸고 있습니다. AI-Ready Data를 통한 글로벌 제조 경쟁력 확보 방안과 페블러스의 데이터 솔루션을 소개합니다.">
-    <meta id="og-image" property="og:image" content="https://blog.pebblous.ai/project/PhysicalAI/image/physical-ai-data-strategy.png">
+    <meta id="og-image" property="og:image" content="https://blog.pebblous.ai/project/PhysicalAI/image/data-pipeline-for-physical-ai-01.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="Physical AI 데이터 전략 인포그래픽">
@@ -60,7 +60,7 @@
     <meta id="twitter-url" property="twitter:url" content="https://blog.pebblous.ai/project/PhysicalAI/data-pipeline-for-physical-ai-01.html">
     <meta id="twitter-title" property="twitter:title" content="Physical AI 시대의 도래: 제조 혁신을 위한 데이터 전략 | Pebblous">
     <meta id="twitter-description" property="twitter:description" content="Physical AI가 제조업의 패러다임을 바꾸고 있습니다. AI-Ready Data를 통한 글로벌 제조 경쟁력 확보 방안과 페블러스의 데이터 솔루션을 소개합니다.">
-    <meta id="twitter-image" property="twitter:image" content="https://blog.pebblous.ai/project/PhysicalAI/image/physical-ai-data-strategy.png">
+    <meta id="twitter-image" property="twitter:image" content="https://blog.pebblous.ai/project/PhysicalAI/image/data-pipeline-for-physical-ai-01.png">
     <meta name="twitter:image:alt" content="Physical AI 데이터 전략 다이어그램">
     <meta property="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@pebblous">
@@ -80,7 +80,7 @@
         "description": "Physical AI가 제조업의 패러다임을 바꾸고 있습니다. 이 보고서는 Physical AI를 위한 핵심 데이터 요구사항을 정의하고, 글로벌 선도 기업들의 동향을 분석하며, AI-Ready Data 확보 전략을 제시합니다.",
         "image": {
             "@type": "ImageObject",
-            "url": "https://blog.pebblous.ai/project/PhysicalAI/image/physical-ai-data-strategy.png",
+            "url": "https://blog.pebblous.ai/project/PhysicalAI/image/data-pipeline-for-physical-ai-01.png",
             "width": 1200,
             "height": 630
         },
@@ -172,6 +172,24 @@
             color: var(--text-primary);
             transition: background-color 0.3s ease, color 0.3s ease;
             scroll-behavior: smooth;
+        }
+
+        /* Sticky Header - Force sticky positioning */
+        #sticky-header,
+        nav#sticky-header {
+            position: -webkit-sticky !important;
+            position: sticky !important;
+            top: 0 !important;
+            z-index: 50 !important;
+            background-color: var(--bg-primary) !important;
+            width: 100% !important;
+        }
+
+        /* Ensure header placeholder doesn't interfere */
+        #header-placeholder {
+            position: sticky !important;
+            top: 0 !important;
+            z-index: 50 !important;
         }
 
         .themeable-card {
@@ -373,6 +391,48 @@
         #scroll-to-top:hover {
             transform: translateY(-4px);
         }
+
+        /* Mobile TOC floating button */
+        #mobile-toc-toggle {
+            position: fixed;
+            bottom: 80px;
+            right: 20px;
+            z-index: 40;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        #mobile-toc-menu {
+            position: fixed;
+            bottom: 140px;
+            right: 20px;
+            max-width: 280px;
+            max-height: 60vh;
+            overflow-y: auto;
+            z-index: 40;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+            display: none;
+        }
+        #mobile-toc-menu.show {
+            display: block;
+        }
+
+        /* TOC styles */
+        .themeable-toc-border {
+            border-color: var(--border-color);
+        }
+        .themeable-toc-link {
+            color: var(--text-secondary);
+            border-color: transparent;
+            transition: all 0.2s ease-in-out;
+        }
+        .themeable-toc-link:hover {
+            border-color: var(--accent-color);
+            color: var(--accent-color);
+        }
+        .themeable-toc-link-active {
+            color: var(--accent-color) !important;
+            border-color: var(--accent-color) !important;
+            font-weight: 500;
+        }
     </style>
 </head>
 <body class="antialiased">
@@ -385,12 +445,30 @@
     <!-- Header Component Placeholder -->
     <div id="header-placeholder"></div>
 
-    <!-- Main Content -->
-    <main class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 max-w-5xl">
+    <!-- Main Container with Sidebar -->
+    <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 lg:grid lg:grid-cols-4 lg:gap-8">
+
+        <!-- Desktop TOC Sidebar -->
+        <nav class="hidden lg:block lg:col-span-1 sticky top-20 self-start h-auto pr-4">
+            <h3 class="font-bold themeable-heading mb-4 text-lg">목차</h3>
+            <ul id="toc-links" class="space-y-3 text-sm border-l-2 themeable-toc-border">
+                <li><a href="#summary" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">Executive Summary</a></li>
+                <li><a href="#requirements" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">데이터 요구사항</a></li>
+                <li><a href="#global-trends" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">글로벌 동향</a></li>
+                <li><a href="#data-quality" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">데이터 품질 관리</a></li>
+                <li><a href="#ai-ready-data" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">AI-Ready Data</a></li>
+                <li><a href="#pebblous-solutions" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">페블러스 솔루션</a></li>
+                <li><a href="#conclusion" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">결론 및 제언</a></li>
+                <li><a href="#pdf-download" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">PDF 다운로드</a></li>
+            </ul>
+        </nav>
+
+        <!-- Main Content -->
+        <main class="lg:col-span-3">
 
         <!-- Hero Section -->
         <header class="text-center mb-16">
-            <h1 class="text-4xl md:text-5xl font-bold themeable-heading mb-6">
+            <h1 class="text-4xl md:text-5xl font-bold themeable-heading mb-6 leading-tight" style="line-height: 1.4;">
                 Physical AI 시대의 도래:<br>제조 혁신을 위한 데이터 전략
             </h1>
             <p class="text-xl themeable-muted mb-4">AI-Ready Data를 통한 글로벌 제조 경쟁력 확보 방안</p>
@@ -402,7 +480,7 @@
         </header>
 
         <!-- Executive Summary -->
-        <section class="mb-16 fade-in-card">
+        <section id="summary" class="mb-16 fade-in-card">
             <div class="themeable-card rounded-xl p-8 md:p-10 interactive-card">
                 <h2 class="text-3xl font-bold themeable-heading mb-6 flex items-center gap-3">
                     <div class="icon-wrapper">
@@ -447,7 +525,7 @@
         </section>
 
         <!-- Data Requirements Section -->
-        <section class="mb-16 fade-in-card">
+        <section id="requirements" class="mb-16 fade-in-card">
             <h2 class="text-3xl font-bold themeable-heading mb-8">Physical AI의 데이터 요구사항: 무엇이 다른가?</h2>
 
             <div class="themeable-text mb-8 leading-relaxed">
@@ -532,7 +610,7 @@
         </section>
 
         <!-- Global Trends Section -->
-        <section class="mb-16 fade-in-card">
+        <section id="global-trends" class="mb-16 fade-in-card">
             <h2 class="text-3xl font-bold themeable-heading mb-8">글로벌 선도 기업 동향: Physical AI를 향한 경쟁</h2>
 
             <p class="themeable-text mb-8 leading-relaxed">
@@ -623,7 +701,7 @@
         </section>
 
         <!-- Data Quality Section -->
-        <section class="mb-16 fade-in-card">
+        <section id="data-quality" class="mb-16 fade-in-card">
             <h2 class="text-3xl font-bold themeable-heading mb-8">데이터 품질 관리: Physical AI의 성패를 가르는 기준</h2>
 
             <div class="themeable-card rounded-xl p-8 md:p-10 mb-8">
@@ -710,7 +788,7 @@
         </section>
 
         <!-- AI-Ready Data Section -->
-        <section class="mb-16 fade-in-card">
+        <section id="ai-ready-data" class="mb-16 fade-in-card">
             <h2 class="text-3xl font-bold themeable-heading mb-8">AI-Ready Data: Physical AI를 위한 고순도 데이터</h2>
 
             <div class="themeable-text mb-8 leading-relaxed">
@@ -759,7 +837,7 @@
         </section>
 
         <!-- Pebblous Solutions Section -->
-        <section class="mb-16 fade-in-card">
+        <section id="pebblous-solutions" class="mb-16 fade-in-card">
             <h2 class="text-3xl font-bold themeable-heading mb-8">페블러스(Pebblous)의 제안: Physical AI를 위한 데이터 솔루션</h2>
 
             <div class="themeable-text mb-10 leading-relaxed">
@@ -894,7 +972,7 @@
         </section>
 
         <!-- Conclusion & Call to Action -->
-        <section class="mb-16 fade-in-card">
+        <section id="conclusion" class="mb-16 fade-in-card">
             <h2 class="text-3xl font-bold themeable-heading mb-8">결론 및 제언: 지금 바로 '데이터 건강검진'이 필요합니다</h2>
 
             <div class="themeable-card rounded-xl p-8 md:p-10 mb-8">
@@ -933,7 +1011,7 @@
         </section>
 
         <!-- PDF Download Section -->
-        <section class="mb-16 fade-in-card">
+        <section id="pdf-download" class="mb-16 fade-in-card">
             <div class="themeable-card rounded-xl p-8 md:p-10 border-2" style="border-color: var(--accent-color);">
                 <div class="flex flex-col md:flex-row items-center gap-8">
                     <div class="flex-shrink-0">
@@ -967,7 +1045,30 @@
             <p>본 보고서의 내용은 ㈜페블러스가 제공한 자료 및 공개된 산업 정보를 기반으로 작성되었으며, 전략적 조언을 목적으로 합니다.</p>
         </section>
 
-    </main>
+        </main>
+    </div>
+
+    <!-- Mobile TOC Toggle Button -->
+    <button id="mobile-toc-toggle" class="lg:hidden p-3 rounded-full themeable-card border shadow-lg">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+        </svg>
+    </button>
+
+    <!-- Mobile TOC Menu -->
+    <nav id="mobile-toc-menu" class="lg:hidden themeable-card rounded-lg border p-4">
+        <h3 class="font-bold themeable-heading mb-4 text-lg">목차</h3>
+        <ul id="mobile-toc-links" class="space-y-3 text-sm">
+            <li><a href="#summary" class="block themeable-toc-link mobile-toc-item">Executive Summary</a></li>
+            <li><a href="#requirements" class="block themeable-toc-link mobile-toc-item">데이터 요구사항</a></li>
+            <li><a href="#global-trends" class="block themeable-toc-link mobile-toc-item">글로벌 동향</a></li>
+            <li><a href="#data-quality" class="block themeable-toc-link mobile-toc-item">데이터 품질 관리</a></li>
+            <li><a href="#ai-ready-data" class="block themeable-toc-link mobile-toc-item">AI-Ready Data</a></li>
+            <li><a href="#pebblous-solutions" class="block themeable-toc-link mobile-toc-item">페블러스 솔루션</a></li>
+            <li><a href="#conclusion" class="block themeable-toc-link mobile-toc-item">결론 및 제언</a></li>
+            <li><a href="#pdf-download" class="block themeable-toc-link mobile-toc-item">PDF 다운로드</a></li>
+        </ul>
+    </nav>
 
     <!-- Scroll to Top Button -->
     <button id="scroll-to-top" aria-label="맨 위로 스크롤">
@@ -1106,6 +1207,57 @@
                     behavior: 'smooth'
                 });
             });
+
+            // Table of Contents Active Link
+            const tocLinks = document.querySelectorAll('#toc-links a');
+            if (tocLinks.length > 0) {
+                const sections = Array.from(document.querySelectorAll('main section[id]'));
+
+                window.addEventListener('scroll', () => {
+                    let currentSectionId = '';
+                    const scrollY = window.pageYOffset;
+
+                    sections.forEach(section => {
+                        const sectionTop = section.offsetTop - 100;
+                        if (scrollY >= sectionTop) {
+                            currentSectionId = section.getAttribute('id');
+                        }
+                    });
+
+                    tocLinks.forEach(link => {
+                        link.classList.remove('themeable-toc-link-active');
+                        link.classList.add('border-transparent');
+                        const href = link.getAttribute('href');
+                        if (href === `#${currentSectionId}`) {
+                            link.classList.add('themeable-toc-link-active');
+                            link.classList.remove('border-transparent');
+                        }
+                    });
+                }, { passive: true });
+            }
+
+            // Mobile TOC Toggle
+            const mobileTocToggle = document.getElementById('mobile-toc-toggle');
+            const mobileTocMenu = document.getElementById('mobile-toc-menu');
+            if (mobileTocToggle && mobileTocMenu) {
+                mobileTocToggle.addEventListener('click', () => {
+                    mobileTocMenu.classList.toggle('show');
+                });
+
+                // Close menu when clicking a link
+                document.querySelectorAll('.mobile-toc-item').forEach(item => {
+                    item.addEventListener('click', () => {
+                        mobileTocMenu.classList.remove('show');
+                    });
+                });
+
+                // Close menu when clicking outside
+                document.addEventListener('click', (e) => {
+                    if (!mobileTocMenu.contains(e.target) && !mobileTocToggle.contains(e.target)) {
+                        mobileTocMenu.classList.remove('show');
+                    }
+                });
+            }
         });
     </script>
 </body>
